2011-06-13  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Adele Peterson.

        Print out bounds origin in layer dump
        https://bugs.webkit.org/show_bug.cgi?id=62583

        Include m_boundsOrigin in the layer dump, which is used by layerTreeAsText().

        * platform/graphics/GraphicsLayer.cpp:
        (WebCore::GraphicsLayer::dumpProperties):

Canonical link: https://commits.webkit.org/78068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88664 268f45cc-cd09-0410-ab3c-d52691b4dbfc